force-app/main/default/objects/FinServ__AccountAccountRelation__c.object
<CustomObject>
    <description>A relationship between two accounts, such as a household and a business account.</description>
    <label>Account-Account Relationship</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Account Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>年度</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratio__c</fullName>
        <label>比例</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>DATEVALUE(&quot;2199-01-01&quot;)</defaultValue>
        <label>迄日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>起始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Unit__c</fullName>
        <label>資料所屬區部</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parties_Code__c</fullName>
        <label>關係代號</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8001</fullName>
                    <label>8001 父</label>
                </value>
                <value>
                    <fullName>8002</fullName>
                    <label>8002 母</label>
                </value>
                <value>
                    <fullName>8003</fullName>
                    <label>8003 子</label>
                </value>
                <value>
                    <fullName>8004</fullName>
                    <label>8004 女兒</label>
                </value>
                <value>
                    <fullName>8005</fullName>
                    <label>8005 祖父</label>
                </value>
                <value>
                    <fullName>8006</fullName>
                    <label>8006 祖母</label>
                </value>
                <value>
                    <fullName>8007</fullName>
                    <label>8007 外祖父</label>
                </value>
                <value>
                    <fullName>8008</fullName>
                    <label>8008 外祖母</label>
                </value>
                <value>
                    <fullName>8009</fullName>
                    <label>8009 兄弟</label>
                </value>
                <value>
                    <fullName>8010</fullName>
                    <label>8010 姊妹</label>
                </value>
                <value>
                    <fullName>8011</fullName>
                    <label>8011 孫</label>
                </value>
                <value>
                    <fullName>8012</fullName>
                    <label>8012 孫女</label>
                </value>
                <value>
                    <fullName>8013</fullName>
                    <label>8013 外孫</label>
                </value>
                <value>
                    <fullName>8014</fullName>
                    <label>8014 外孫女</label>
                </value>
                <value>
                    <fullName>8031</fullName>
                    <label>8031 配偶</label>
                </value>
                <value>
                    <fullName>8201</fullName>
                    <label>8201 董事長</label>
                </value>
                <value>
                    <fullName>8202</fullName>
                    <label>8202 副董事長</label>
                </value>
                <value>
                    <fullName>8203</fullName>
                    <label>8203 總經理</label>
                </value>
                <value>
                    <fullName>8204</fullName>
                    <label>8204 副總經理</label>
                </value>
                <value>
                    <fullName>8253</fullName>
                    <label>8253 獨資行號負責人</label>
                </value>
                <value>
                    <fullName>8264</fullName>
                    <label>8264 名譽董事長</label>
                </value>
                <value>
                    <fullName>8265</fullName>
                    <label>8265 董事</label>
                </value>
                <value>
                    <fullName>8267</fullName>
                    <label>8267 常務董事</label>
                </value>
                <value>
                    <fullName>8268</fullName>
                    <label>8268 常駐監察人</label>
                </value>
                <value>
                    <fullName>8269</fullName>
                    <label>8269 監察人</label>
                </value>
                <value>
                    <fullName>8280</fullName>
                    <label>8280 局長</label>
                </value>
                <value>
                    <fullName>8282</fullName>
                    <label>8282 理事主席</label>
                </value>
                <value>
                    <fullName>8283</fullName>
                    <label>8283 合夥人</label>
                </value>
                <value>
                    <fullName>8284</fullName>
                    <label>8284 清算人</label>
                </value>
                <value>
                    <fullName>8285</fullName>
                    <label>8285 監事</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>收付款天期</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_AAR_NET__c</fullName>
        <formula>TEXT(Owner:User.Unit__c) != TEXT(Record_Unit__c)</formula>
        <label>關係擁有者與關係所屬單位不同</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否為關係人</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Code__c</fullName>
        <inlineHelpText>A. 有控制與從屬關係
B. 有相互投資關係 
C. 董事長 (或代表公司董事、執行業務股東) 或總經理與他公司之董事長 (或代表公司董事、執行業務股東) 或總經理為同一人或具配偶關係者
D. 其他</inlineHelpText>
        <label>關係企業代號</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>若選擇「其他」，請先填寫「其他結帳方式說明」欄位</inlineHelpText>
        <label>結帳方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                    <label>月結</label>
                </value>
                <value>
                    <fullName>C2</fullName>
                    <label>2個月結</label>
                </value>
                <value>
                    <fullName>C3</fullName>
                    <label>出貨後</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                    <label>其他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CUB_External_Id__c</fullName>
        <description>關係key值，不使用原生FSC package的external id欄位</description>
        <externalId>true</externalId>
        <label>CUB External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_From_Non_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>資料來自外部系統</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Data_Source__c</fullName>
        <label>最近資料來源</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orig_Data_Source__c</fullName>
        <label>原始資料來源</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatic_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>自動建立資料</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Items__c</fullName>
        <label>進銷貨項目</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholding_Ratio__c</fullName>
        <label>持股比例</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>進銷貨金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Method__c</fullName>
        <inlineHelpText>若選擇其他，請先填寫「其他交易方式說明」欄位</inlineHelpText>
        <label>交易方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                    <label>T/T</label>
                </value>
                <value>
                    <fullName>T2</fullName>
                    <label>L/C</label>
                </value>
                <value>
                    <fullName>T3</fullName>
                    <label>現金</label>
                </value>
                <value>
                    <fullName>T4</fullName>
                    <label>期票</label>
                </value>
                <value>
                    <fullName>T5</fullName>
                    <label>其他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Period__c</fullName>
        <label>往來期間(年)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relation_Record_Key__c</fullName>
        <formula>RecordType.DeveloperName &amp;
TEXT(FinServ__Account__r.Customer_Data_Country__c) &amp; 
TEXT(FinServ__Account__r.Identification_Type__c) &amp; 
FinServ__Account__r.Customer_ID__c &amp;
TEXT(FinServ__RelatedAccount__r.Customer_Data_Country__c) &amp;
TEXT(FinServ__RelatedAccount__r.Identification_Type__c) &amp;
FinServ__RelatedAccount__r.Customer_ID__c &amp;
IF(RecordType.DeveloperName = &quot;RelatedParties&quot;, TEXT(Parties_Code__c), &quot;&quot;) &amp; 
IF(RecordType.DeveloperName = &quot;SupplyChain&quot;, TEXT(FinServ__Role__r.SupplyChain_Type__c), &quot;&quot;) &amp;
IF(RecordType.DeveloperName = &quot;SupplyChain&quot;, Year__c, &quot;&quot;) &amp;
IF(RecordType.DeveloperName = &quot;Affiliate&quot;, 
  IF(INCLUDES(Affiliate_Code__c, &quot;A&quot;), &quot;A&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Affiliate_Code__c, &quot;B&quot;), &quot;B&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Affiliate_Code__c, &quot;C&quot;), &quot;C&quot;, &quot;&quot;) 
, &quot;&quot;)</formula>
        <label>關係Key值</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwner_AAR_NET__c</fullName>
        <formula>TEXT(FinServ__Account__r.Unit__c) != TEXT(Record_Unit__c)</formula>
        <label>帳戶所屬單位與關係所屬單位不同</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Payment_Method__c</fullName>
        <label>其他結帳方式說明</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Transaction_Method__c</fullName>
        <label>其他交易方式說明</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Account__c</columns>
        <columns>FinServ__RelatedAccount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Record_Unit__c</columns>
        <columns>Owner_AAR_NET__c</columns>
        <columns>AccountOwner_AAR_NET__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinServ__Account__c</field>
            <operation>equals</operation>
            <value>法人A</value>
        </filters>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <label>集團</label>
    </recordTypes>
    <recordTypes>
        <fullName>Affiliate</fullName>
        <active>true</active>
        <label>關係企業</label>
    </recordTypes>
    <recordTypes>
        <fullName>SupplyChain</fullName>
        <active>true</active>
        <label>進銷貨廠商</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShareHoldings</fullName>
        <active>true</active>
        <label>持股比例關係</label>
    </recordTypes>
    <recordTypes>
        <fullName>RelatedParties</fullName>
        <active>true</active>
        <label>關係人</label>
    </recordTypes>
    <validationRules>
        <fullName>CUB_AccountTypeIDCantBe8889</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(
    RecordType.DeveloperName = &quot;RelatedParties&quot;, 
    RecordType.DeveloperName = &quot;Affiliate&quot;, 
    RecordType.DeveloperName = &quot;Group&quot;
  ), 
  OR(
    ISPICKVAL(FinServ__Account__r.Identification_Type__c, &quot;88&quot;), 
    ISPICKVAL(FinServ__Account__r.Identification_Type__c, &quot;89&quot;), 
    ISPICKVAL(FinServ__RelatedAccount__r.Identification_Type__c, &quot;88&quot;), 
    ISPICKVAL(FinServ__RelatedAccount__r.Identification_Type__c, &quot;89&quot;)
  )
)</errorConditionFormula>
        <errorMessage>關係企業/關係人/集團關係不可選取「統編證件類型」為「88/89」的帳戶</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_GroupRelationAccountType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Group&quot;, 
  NOT(OR(
    AND(FinServ__Account__r.RecordType.DeveloperName = &quot;Company&quot;, FinServ__RelatedAccount__r.RecordType.DeveloperName = &quot;Group&quot;), 
    AND(FinServ__Account__r.RecordType.DeveloperName = &quot;Group&quot;, FinServ__RelatedAccount__r.RecordType.DeveloperName = &quot;Company&quot;)
  ))
)</errorConditionFormula>
        <errorMessage>集團關係為集團戶與法人間的關係</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_AffiliateRelationAccountType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Affiliate&quot;, 
  OR(
    FinServ__Account__r.RecordType.DeveloperName != &quot;Company&quot;,
    FinServ__RelatedAccount__r.RecordType.DeveloperName != &quot;Company&quot;
  )
)</errorConditionFormula>
        <errorMessage>關係企業為兩法人間的關係</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AARCanOnlyBeDeactivated</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__Account__c),ISCHANGED(FinServ__RelatedAccount__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record can&apos;t be edited. To update relationship information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_SupplyChainRelationAccountType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;SupplyChain&quot;, 
  OR(
    FinServ__Account__r.RecordType.DeveloperName != &quot;Company&quot;,
    FinServ__RelatedAccount__r.RecordType.DeveloperName != &quot;Company&quot;
  )
)</errorConditionFormula>
        <errorMessage>進銷貨關係為兩法人間的關係</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveAARCannotBeEdited</fullName>
        <active>false</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record can&apos;t be edited. To update relationship information, you can create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_TransactionMethodNoteIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Transaction_Method__c, &quot;T5&quot;),
  Other_Transaction_Method__c = NULL
)</errorConditionFormula>
        <errorMessage>若「交易方式」選擇「其他」，請先填寫「其他交易方式說明」</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_UserShouldBeTheSameTeamWithAcct</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.DeveloperName != &apos;Group&apos;,
  $Profile.Name != &apos;CUB Operation Team&apos;,
  $Profile.Name != &quot;System Administrator&quot;,
  $Profile.Id != &quot;00eH3000000eiNeIAI&quot;,
  $Profile.Description != &quot;System Administrator&quot;,
  TEXT($User.Unit__c) != TEXT(FinServ__Account__r.Unit__c),
  TEXT($User.Unit__c) != TEXT(FinServ__RelatedAccount__r.Unit__c)
)</errorConditionFormula>
        <errorMessage>需與兩帳戶任一「所屬單位」相同，才可建立/編輯此關係</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AccountCannotBeAnIndividual</fullName>
        <active>false</active>
        <description>Error message when any selected account is part of an individual in an AAR.</description>
        <errorConditionFormula>OR(ISPICKVAL(FinServ__Account__r.FinServ__IndividualType__c,&apos;Individual&apos;),ISPICKVAL( FinServ__RelatedAccount__r.FinServ__IndividualType__c, &apos;Individual&apos;))</errorConditionFormula>
        <errorMessage>Account can&apos;t be a part of an individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_PaymentMethodReasonNoteIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Payment_Method__c, &quot;C4&quot;),
  Other_Payment_Method__c = NULL
)</errorConditionFormula>
        <errorMessage>若「結帳方式」選擇「其他」，請先填寫「其他結帳方式說明」</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_RelatedPartiesRelationAccountType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;RelatedParties&quot;, 
  OR(
    FinServ__Account__r.RecordType.DeveloperName = &quot;Group&quot;,
    FinServ__RelatedAccount__r.RecordType.DeveloperName = &quot;Group&quot;
  )
)</errorConditionFormula>
        <errorMessage>關係人為「自然人/法人」與「自然人/法人」間的關係</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CUB_OnlyGroupOwnerTeamCanCreateGroupRel</fullName>
        <active>true</active>
        <description>因為System Admin profile疑似無法透過Profile.Name或Profile.Id來抓，所以作為備用以Profile.Description來判斷</description>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Group&quot;, 
  $Profile.Name != &quot;System Administrator&quot;,
  $Profile.Id != &quot;00eH3000000eiNeIAI&quot;,
  $Profile.Description != &quot;System Administrator&quot;,
  NOT(AND(ISNEW(), Automatic_Created__c = TRUE)),
  NOT(
    OR(
      TEXT($User.Unit__c) = IF(FinServ__Account__r.RecordType.DeveloperName = &quot;Group&quot;, TEXT(FinServ__Account__r.Unit__c), &quot;&quot;), 
      TEXT($User.Unit__c) = IF(FinServ__RelatedAccount__r.RecordType.DeveloperName = &quot;Group&quot;, TEXT(FinServ__RelatedAccount__r.Unit__c), &quot;&quot;)
    )
  )
)</errorConditionFormula>
        <errorMessage>僅集團虛擬戶所屬單位可建立/維護集團關係</errorMessage>
    </validationRules>
</CustomObject>