force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/FinServ__AssociationType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AssociationType__c</fullName>
    <label>Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Peer</fullName>
                <default>true</default>
                <label>Peer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>