force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/FinServ__IsShareholder__c.field-meta.xml
<CustomField>
    <fullName>FinServ__IsShareholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the stakeholder is a shareholder (true) or not (false).</description>
    <label>Shareholder</label>
    <type>Checkbox</type>
</CustomField>