force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/FinServ__ShareholderHierarchyRole__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ShareholderHierarchyRole__c</fullName>
    <description>Specifies the shareholder&apos;s ownership type.</description>
    <label>Shareholder Hierarchy Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ultimate Beneficial Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>